<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CPU Spy Plus - XDA</string>
    <string name="version_name">0.5.24</string>

    <!-- ACTIVITY TEST -->
    <string name="ui_at_start_bttn">Start Tests</string>
    <string name="ui_at_progress_str">Progress:</string>
    <string name="ui_at_progress_verbose_str">Messages:</string>

    <dimen name="fixed_icon_dimension">50dp</dimen>

    <string-array name="all_tests_name">
        <item>Reading state_in_time file: </item>
        <item>Reading kernel infos: </item>
        <item>Reading CPU infos: </item>
        <item>Reading CPU freqs range: </item>
        <item>Reading CPU scaling range: </item>
        <item>Reading governor: </item>
    </string-array>

    <!-- SYSTEMUTILS -->
    <string name="str_file_not_exists">File doesn\'t exist:</string>
    <string name="str_io_error">IO error:</string>

    <!-- MISCACTIVITY -->
    <string name="ui_misc_freqs_range">Freqs range: </string>
    <string name="ui_misc_scaling_range">Scaling range: </string>

    <!-- LOGFILE -->
    <string name="ui_la_header">Logfile</string>
    <string name="ui_la_reload_button">Reload Logfile</string>
    <string name="ui_la_delete_button">Delete Logfile</string>

    <!-- INFORMATIONS -->
    <string name="ui_info_layout_main_header">Informations</string>
    <string name="ui_header_new_theme">New Theme Buttons</string>
    <string name="ui_btt_show_states_under_perc">View &lt;XY% states</string>
    <string name="ui_btt_hide_states_under_perc">Hide &lt;XY% states</string>
    <string name="ui_btt_restore_timer">Restore timer</string>
    <string name="ui_btt_reset_timer">Reset timer</string>
    <string name="ui_btt_refresh_data">Refresh Data</string>
    <string name="ui_header_show_hide">Show/Hide Content</string>
    <string name="ui_message_show_hide">Click on the main header (almost black ones) to change the relative stats visibility.</string>
    <string name="ui_header_dual_states">Dual core stats</string>
    <string name="ui_message_dual_states">The app doesn\'t show dual core stats because, according to the driver kernel, it\'s not possible. To have the stats for each core, instead of each cpu, the kernel driver must be rewritten. Although it would be extremely easy for me, the app doesn\'t show the informations of different CPU units because my beloved S2 isn\'t enough: only dual core.</string>
    <string name="ui_header_logfile">Log File</string>
    <string name="ui_message_logfile">If the "verbose app" option is activated the app will print short messages in the "CpuSpy.log" file, which is located in the sdcard.</string>

    <!-- PREFERENCES - MAIN ACTIVITY -->
    <string name="ui_pref_header_settings">Settings</string>
    <string name="ui_pref_header_layout_option">Layout Option</string>
    <string name="ui_pref_header_audio_option">Audio Option</string>
    <string name="ui_pref_header_subcategory_audio_option">UI Sounds Options</string>
    <string name="ui_pref_header_layout_cable">Cable Option</string>
    <string name="ui_pref_header_info_contact">Info &amp; Contacts</string>
    <string name="ui_pref_header_show_info">Show Informations</string>
    <string name="ui_pref_header_mail_2_dev">Mail to developer</string>
    <string name="ui_pref_header_xda_thread">XDA forum thread</string>
    <string name="ui_pref_header_development">Development Menu</string>
    <string name="ui_pref_verbose_app_title">Verbose App</string>
    <string name="ui_pref_verbose_app_summary">Save messages to logfile</string>

    <!-- PREFERENCES - LAYOUT OPTIONS -->
    <string name="ui_pref_checkbox_all_states_top_title">View \&apos;All states\&apos; on top</string>
    <string name="ui_pref_checkbox_all_states_top_summary">Show them as first row of the bars graph</string>
    <string name="ui_pref_checkbox_hide_kernel_cpu_info_title">Hide Cpu and Kernel Infos</string>
    <string name="ui_pref_checkbox_hide_kernel_cpu_info_summary">New info layout through menu option</string>
    <string name="ui_pref_seekbar_threshold_title">Threshold to group states</string>
    <string name="ui_pref_seekbar_threshold_summary">States under this value of % will be grouped</string>
    <string name="ui_pref_select_themes_title">Select theme</string>
    <string name="ui_pref_select_themes_summary">Select your favourite theme</string>

    <string-array name="all_theme_name">
        <item>Classic Theme</item>
        <item>New Theme</item>
    </string-array>

    <integer-array name="theme_choice">
        <item>10</item>
        <item>11</item>
    </integer-array>

    <!-- PREFERENCES - AUDIO OPTIONS -->
    <string name="ui_pref_checkbox_enable_ui_sounds_title">Enable UI Sounds</string>
    <string name="ui_pref_checkbox_enable_ui_sounds_summary">Enable main layout UI sounds</string>
    <string name="ui_pref_checkbox_enable_ui_pref_sounds_title">Enable Pref UI Sounds</string>
    <string name="ui_pref_checkbox_enable_ui_pref_sounds_summary">Enable preference layout UI sounds</string>

    <!-- PREFERENCES - CABLE OPTIONS -->
    <string name="ui_pref_checkbox_enable_batt_br_title">Eable Charger Events</string>
    <string name="ui_pref_checkbox_enable_batt_br_summary">Eable reaction to cable (un)plugging</string>
    <string name="ui_pref_seekbar_batt_threshold_title">Minimum battery level for reset</string>
    <string name="ui_pref_seekbar_batt_threshold_summary">Threshold when cable is unplugged</string>
    <string name="ThresholdFreqsToHide">ThresholdFreqsToHide</string>
    <string name="ThresholdActivateTimerKey">ThresholdActivateTimerKey</string>
    <string name="Pref_delete_connection_data_key">pref_delete_connection_data_key</string>
    <string name="Pref_show_release_key">pref_show_release_key</string>

    <!-- NO BUTTON LAYOUT -->
    <string name="ui_header_time_in_state">Time In State</string>
    <string name="ui_subheader_time">Time</string>
    <string name="ui_subheader_percetage">%</string>
    <string name="ui_subheader_mhz">MHz</string>
    <string name="ui_states_warning_str">No states file found. Are you sure your phone is compatible?\n\nIf you are running a custom ROM or kernel, try contacting its developer to inform him that the states file is not readable.</string>
    <string name="ui_header_tot_states_time">Total statistics</string>
    <string name="ui_subheader_time_from_boot">Time since boot</string>
    <string name="ui_subheader_total_state_time">Total state time</string>
    <string name="ui_header_battery_stats">Statistics Since Reset/Unplugged</string>
    <string name="ui_subheader_initial_level">Initial level</string>
    <string name="ui_subheader_juice_lost">Juice Lost</string>
    <string name="ui_header_unused_states">Unused CPU states</string>
    <string name="ui_header_cpu_info">CPU Info</string>
    <string name="ui_header_kernel_info">Kernel Info</string>
    <string name="ui_header_less_1st_part">States under the thereshold of</string>
    <string name="ui_header_cable_receiver">Listening for cable events</string>
    <string name="ui_row_all_states">All states</string>
    <string name="ui_row_deep_state">Deep Sleep</string>
    <string name="ui_content_desription_image"></string>
    <string name="ui_dialog_header_attention">Attention</string>
    <string name="ui_dialog_message_not_compatible">There was an error reading the CPU states file.\nDo you want to run the compatibility test?</string>
    <string name="ui_dialog_ok_button">OK</string>
    <string name="ui_dialog_message_connected_cable">Device\'s connected to cable. Unplug it to reset timer.</string>
    <string name="ui_dialog_header_adsblock">Attention AdBlocker</string>
    <string name="ui_dialog_message_adsblock">The ads you\'re blocking serve to entice the development of the app. There is an ad-free version of CPU Spy Plus in the Play store.</string>
    <string name="ui_dialog_close_button">Close</string>

    <!-- MENU ITEMS -->
    <string name="menu_compare_files">CPU Files</string>
    <string name="menu_log_file">Log File</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_reset">Reset Timers</string>
    <string name="menu_restore">Restore Timers</string>
    <string name="menu_perc_1st_part">Show/Hide</string>
    <string name="menu_perc_2nd_part">% used stats</string>
    <string name="menu_misc_info">Misc Info</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_app_test">App Test</string>

    <!-- CRASH REPORT -->
    <string name="crash_toast_text">Ooooops ! An error occurred, please sent the error report to developer to help fix the issue !</string>
    <string name="crash_dialog_title">CPU Spy Plus\'s crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click \'OK\'.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>

</resources>